# robot-orchestrator

./: .env.example  .gitignore  README.md  auto_learn.py  cli.py  config.py  models.py  orchestrator.py  pyproject.toml  rorc  storage.py
.claude/: settings.json
adapters/: claude_adapter.py  codex_adapter.py  openclaw_adapter.py
profiles/: manipulator.yaml  ros2_nav.yaml
prompts/: claude_execute.md
schemas/: codex_audit.schema.json  codex_plan.schema.json
state/logs/: 4a8535b2-99bc-487a-919c-d2f0605da466_build_result.json  4a8535b2-99bc-487a-919c-d2f0605da466_claude_prompt.txt  4a8535b2-99bc-487a-919c-d2f0605da466_claude_rework1_prompt.txt  4a8535b2-99bc-487a-919c-d2f0605da466_claude_rework2_prompt.txt  4a8535b2-99bc-487a-919c-d2f0605da466_sim_result.json  5232c2a2-7eee-456d-8f9b-b6e079e56865_sim_result.json  5232c2a2-7eee-456d-8f9b-b6e079e56865_test_result.json  53e009d1-5c3f-424a-b178-7063fd2465ca_build_result.json  53e009d1-5c3f-424a-b178-7063fd2465ca_claude_prompt.txt  7f4b95d1-84f6-43d7-9c8c-2ba031d2477b_claude_prompt.txt  7f4b95d1-84f6-43d7-9c8c-2ba031d2477b_sim_result.json
state/logs/artifacts_4a8535b2-99bc-487a-919c-d2f0605da466/: 4a8535b2-99bc-487a-919c-d2f0605da466_test_result.json  summary.json
state/logs/artifacts_5232c2a2-7eee-456d-8f9b-b6e079e56865/: 5232c2a2-7eee-456d-8f9b-b6e079e56865_build_result.json  summary.json
state/logs/artifacts_53e009d1-5c3f-424a-b178-7063fd2465ca/: summary.json  (+2 more)
templates/: CLAUDE.md  codex_config.toml
tests/: test_orchestrator.py
validators/: build.sh  collect_artifacts.sh  sim_smoke.sh  test.sh
(+3 files in other folders)
